Added test case for #10123.
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>